ubiquity (1.3.28) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Use just one progress message for all target-config hooks, to avoid
    uglinesses like "Running 32gnome_power_manager".
  * KDE frontend: In the partition create dialog, set the maximum partition
    size before setting the value to avoid the value being incorrectly
    clipped.
  * Disable the intro message for beta.

  [ Evan Dandrea ]
  * When m-a is disabled, don't try to run its apply script. (LP: 89821)
  * If migration-assistant cannot unmount a partition, prompt the user
    to do it manually. (LP: 89605)
  * Added another descriptive label to the Migrate page.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 14 Mar 2007 07:49:26 -0400

ubiquity (1.3.27) feisty; urgency=low

  * Add a 'debian/rules update-local' target to allow updating d-i/source/
    without updating debian/changelog, which is sometimes convenient for
    local hacking.
  * New partitioner: Add validation for system partitions being formatted
    (LP: #89461).
  * Really use MyKeyboardNames.pl (based on xkb-data) rather than
    KeyboardNames.pl.
  * Automatic update of included source packages: console-setup 1.13ubuntu8.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 12 Mar 2007 12:15:39 +0000

ubiquity (1.3.26) feisty; urgency=low

  * Make acquire_lock properly atomic (LP: #90391).
  * New partitioner: Remove the disk bar placeholder in UIs; we'll probably
    have to do without the disk bar for Feisty at this point.
  * KDE frontend: Fix disk selection handling in automatic partitioner so
    that we stop always selecting the last disk no matter what (LP: #83010).
  * Reluctantly print error messages from main program to stdout rather than
    stderr, as gksudo swallows them otherwise.
  * Drop dependencies on gparted and qtparted. Instead, print a helpful
    error message if --old-partitioner is used but these programs are not
    installed.
  * Automatic update of included source packages: partconf 1.19build1.
