@@ -1,2 +1,3 @@
+kboot-installer
 partman-newworld
 yaboot-installer
