@@ -2,5 +2,9 @@
 d-i/source/hw-detect/debian/hw-detect/bin/discover-ibm bin
 d-i/source/hw-detect/debian/hw-detect/bin/discover-mac-io bin
 
+# kboot-installer
+d-i/source/kboot-installer/debian/kboot-installer/lib/partman lib
+ubiquity/components/kbootinstaller.py usr/lib/ubiquity/ubiquity/components
+
 # yaboot-installer
 ubiquity/components/yabootinstaller.py usr/lib/ubiquity/ubiquity/components
